--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,9 @@
         <scope>test</scope>
     </dependency>
         <dependency>
-            <groupId>io.rest-assured</groupId>
-            <artifactId>rest-assured</artifactId>
-            <version>5.5.0</version>
-            <scope>test</scope>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.16.0</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
